Fix some footer wrapping issues, still needs work but isn't broken at least

--- a/assets/scss/layouts/_l-default.scss
+++ b/assets/scss/layouts/_l-default.scss
@@ -66,7 +66,10 @@ footer {
     bottom: 0;
     width: 100%;
     height: auto;
-    max-height: $footer-height;
+
+    @include breakpoint("medium") {
+      max-height: $footer-height;
+    }
     
     @include srnbg;
 
